@@ -3,6 +3,8 @@
 * Changed: Error reporting now shows 'buildr aborted!' (used to say rake),
 more of the stack trace without running --trace, and when running with
 supported terminal, error message is red.
+* Fixed: BUILDR-106 download(artifact(...)=>url) broken in certain cases
+(Lacton).
 
 1.3.2 (2008-07-18)
 * Added: --prereqs command line argument to show all tasks and their
